# sentinel-qa-platform

./: .gitignore  Dockerfile  LICENSE  README.md  bank_accounts.py  config.json  dockerfile  main.py  pyproject.toml  requirements.txt
tests/: test_bank_accounts.py
utils/: config_manager.py
