[project]
name = "sentinel-qa-platform"
version = "0.1.0"
description = "A hybrid BDD test automation framework."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.5",
    "selenium>=4.38.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-html>=4.1.1",
]
[tool.pytest.ini_options]
pythonpath = [
  "."
]